  Bugfix: Created new matching folder to wrong folder (#2890961)
  Bugfix: Strange scrolling effect in location pane (#2942869)
  Bugfix: Plugin error after interrupting folder compare (#2919475)
  Bugfix: "+" and "-" from the number block don't work in the editor (#3306182)
  Bugfix: Date format did not respect Regional Settings (#3175189)
  Translation updates:
  - Hungarian (#3164982)

WinMerge 2.13.20 - 2010-10-20 (r7319)
  Add missing keywords to Pascal highlighter (#2834192)
  Recognize .ascx files as ASP files (#3042393)
  Fix help locations (#2988974)
  Show only "Copy to other side" item in file compare
    context menu (#2600787)
  Expand/collapse folders from keyboard (#2203904)
  Improve detecting XML files in file compare (#2726531)
  Initialize folder selection dialog to currently selected folder in
    options dialog (r6570)
  New translation: Persian (#2877121, #3065119)
  New translation: Serbian (#3017674, #3065119)
  Installer: Drop Windows 9x/ME/NT4 support and use Microsoft runtime
    libraries installer (#3070254)
  Installer: Remove Uninstall shortcut from start menu folder (#3076909)
  Installer: Don't install quick launch icon for Windows 7 (#3079966)
  Installer: Add OpenCandy to the InnoSetup installer (#3088720)
  Bugfix: WinMerge was vulnerable to DLL hijacking as described in
    Microsoft Security Advisory (2269637)  (#33056008)
  Bugfix: Location pane focus enabled "Save" (#3022292)
  Bugfix: "Copy and advance" toolbar icons not automatically enabled (#3033325)
  Translation updates:
  - Bulgarian (#3082392)
  - Chinese (#3033324)
  - Dutch (#2804979)
  - French (#2850842, #2968200)
  - Slovenian (#2917796, #2932094, #2934354, #3070136)
  - Spanish (#2930734)
  - Turkish (#2825132, #2827817)
  - Ukrainian (#2817835)

WinMerge 2.12.4 - 2009-06-09 (r6833)
  Add more C/C++ types to syntax highlight (#2776705)
  Create config log file to My Documents-folder (#2789839)
  Bugfix: Reports had same left/right descriptions (#2772646)